crates/sdk/tests/macros/invalid_nested_generics.stderr
error: (calimero)> generic types are not supported
 --> tests/macros/invalid_nested_generics.rs:9:6
  |
9 | impl<T> MyState<T> {
  |      ^

error[E0277]: (calimero)> no method named `#[app::init]` found for type `MyState<T>`
 --> tests/macros/invalid_nested_generics.rs:6:8
  |
6 | struct MyState<T>(T);
  |        ^^^^^^^^^^ add an `#[app::init]` method to this type
  |
  = help: the trait `AppStateInit` is not implemented for `MyState<T>`
note: required by a bound in `AppState`
 --> src/state.rs
  |
  | pub trait AppState: BorshSerialize + BorshDeserialize + AppStateInit {
  |                                                         ^^^^^^^^^^^^ required by this bound in `AppState`

error[E0277]: the trait bound `T: BorshDeserialize` is not satisfied
 --> tests/macros/invalid_nested_generics.rs:6:8
  |
6 | struct MyState<T>(T);
  |        ^^^^^^^^^^ the trait `BorshDeserialize` is not implemented for `T`
  |
note: required for `MyState<T>` to implement `BorshDeserialize`
 --> tests/macros/invalid_nested_generics.rs:5:1
  |
5 | #[app::state]
  | ^------------
  | |
  | unsatisfied trait bound introduced here
6 | struct MyState<T>(T);
  |        ^^^^^^^^^^
note: required by a bound in `AppState`
 --> src/state.rs
  |
  | pub trait AppState: BorshSerialize + BorshDeserialize + AppStateInit {
  |                                      ^^^^^^^^^^^^^^^^ required by this bound in `AppState`
  = note: this error originates in the attribute macro `app::state` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T` with trait `BorshDeserialize`
  |
6 | struct MyState<T: calimero_sdk::borsh::BorshDeserialize>(T);
  |                 +++++++++++++++++++++++++++++++++++++++

error[E0277]: the trait bound `T: BorshSerialize` is not satisfied
 --> tests/macros/invalid_nested_generics.rs:6:8
  |
6 | struct MyState<T>(T);
  |        ^^^^^^^^^^ the trait `BorshSerialize` is not implemented for `T`
  |
note: required for `MyState<T>` to implement `BorshSerialize`
 --> tests/macros/invalid_nested_generics.rs:5:1
  |
5 | #[app::state]
  | ^------------
  | |
  | unsatisfied trait bound introduced here
6 | struct MyState<T>(T);
  |        ^^^^^^^^^^
note: required by a bound in `AppState`
 --> src/state.rs
  |
  | pub trait AppState: BorshSerialize + BorshDeserialize + AppStateInit {
  |                     ^^^^^^^^^^^^^^ required by this bound in `AppState`
  = note: this error originates in the attribute macro `app::state` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T` with trait `BorshSerialize`
  |
6 | struct MyState<T: calimero_sdk::borsh::BorshSerialize>(T);
  |                 +++++++++++++++++++++++++++++++++++++

error[E0277]: the trait bound `T: Mergeable` is not satisfied
 --> tests/macros/invalid_nested_generics.rs:5:1
  |
5 | #[app::state]
  | ^^^^^^^^^^^^^ the trait `Mergeable` is not implemented for `T`
  |
  = note: this error originates in the attribute macro `app::state` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T` with trait `Mergeable`
  |
6 | struct MyState<T: calimero_storage::collections::Mergeable>(T);
  |                 ++++++++++++++++++++++++++++++++++++++++++
